--- a/Module-2-Assignment/styles.css
+++ b/Module-2-Assignment/styles.css
@@ -10,12 +10,11 @@ header {
     /*background-color: #333;*/
     color: black;
     text-align: center;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 .container {
-    max-width: 1200px;
-    margin: 80px;
+    margin: 20px;
     padding: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -23,11 +22,12 @@ header {
 }
 
 .section {
-    background-color: grey;
+    background-color: lightgrey;
     margin: 20px;
     flex: 1;
     padding: 20px;
     position: relative;
+    border: 1px solid black;
 }
 
 .section-title-chicken {
@@ -38,7 +38,7 @@ header {
     color: black;
     padding: 5px 10px;
     font-weight: bold;
-    margin-right: auto;
+    margin-right: 10px;
 }
 
 .section-title-beef {
@@ -49,7 +49,7 @@ header {
     color: white;
     padding: 5px 10px;
     font-weight: bold;
-    margin-right: auto;
+    margin-right: 10px;
 }
 .section-title-sushi {
     position: absolute;
@@ -59,7 +59,7 @@ header {
     color: black;
     padding: 5px 10px;
     font-weight: bold;
-    margin-right: auto;
+    margin-right: 10px;
 }
 
 /* Media Queries */
@@ -74,36 +74,24 @@ header {
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
     .container {
-        flex-direction: column;
+        flex-direction: row;
     }
-    .section:nth-child(1),
+    .section:nth-child(1) {
+        flex: 20%;
+    }
     .section:nth-child(2) {
-        width: 50%;
+        flex: 20%;
     }
-    /*.section {
-        width: calc(50% - 20px); 
+
+/*    .section:nth-child(1),*/
+   /* .section:nth-child(2) {
+                width: 50%;
     }*/
     .sushi {
-        width: 100%; /* Sushi takes up the entire second row */
-        margin-top: 10px; /* Add margin to separate the rows */
-    }
-}
-    /*.container {
         flex-direction: column;
-    }
-    /*.section:{
-        border: 10px solid darkred;
-        float: left;  
-    }*/
-    .section:nth-child(1) {
-        width: 50%;
-    }
-    .section:nth-child(2) {
-        width: 50%;
-    }
-    .section:nth-child(3) {
-        width: 100%;
-    }*/
+        flex: 100%; /* Sushi takes up the entire second row */
+        /*margin-top: 10px; /* Add margin to separate the rows */
+    }   
 }
 
 @media screen and (min-width: 992px) {
