--- a/Module-2-Assignment/styles.css
+++ b/Module-2-Assignment/styles.css
@@ -19,6 +19,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    margin-left: 10px;
 }
 
 .section {
@@ -28,6 +29,8 @@ header {
     padding: 20px;
     position: relative;
     border: 1px solid black;
+    margin-right: 10px
+    margin-left: 20px;
 }
 
 .section-title-chicken {
@@ -59,7 +62,7 @@ header {
     color: black;
     padding: 5px 10px;
     font-weight: bold;
-    margin-right: 10px;
+    margin-right: 10px; 
 }
 
 /* Media Queries */
